Fixed login bug and added update API docs to return the same user resource
